crates/ink/tests/ui/trait_def/fail/message_input_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeDecode` is not satisfied
 --> tests/ui/trait_def/fail/message_input_non_codec.rs:6:23
  |
6 |     fn message(&self, input: NonCodec);
  |                       ^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodec`
  |
  = help: the following other types implement trait `WrapperTypeDecode`:
            Box<T>
            sp_core::Bytes
            Rc<T>
            Arc<T>
  = note: required for `NonCodec` to implement `ink::parity_scale_codec::Decode`
note: required by a bound in `DispatchInput`
 --> src/codegen/dispatch/type_check.rs
  |
  | pub struct DispatchInput<T>(T)
  |            ------------- required by a bound in this struct
  | where
  |     T: scale::Decode + 'static;
  |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
 --> tests/ui/trait_def/fail/message_input_non_codec.rs:3:1
  |
3 | #[ink::trait_definition]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
4 | pub trait TraitDefinition {
5 |     #[ink(message)]
  |     - required by a bound introduced by this call
  |
  = help: the following other types implement trait `WrapperTypeEncode`:
            Box<T>
            bytes::bytes::Bytes
            Cow<'a, T>
            ink::parity_scale_codec::Ref<'a, T, U>
            sp_core::Bytes
            Rc<T>
            Arc<T>
            Vec<T>
          and $N others
  = note: required for `NonCodec` to implement `Encode`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
 --> $WORKSPACE/crates/env/src/call/execution_input.rs
  |
  |     pub fn push_arg<T>(
  |            -------- required by a bound in this associated function
...
  |         T: scale::Encode,
  |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`

error[E0599]: the method `try_invoke` exists for struct `CallBuilder<E, Set<Call<E>>, Set<ExecutionInput<ArgumentList<Argument<NonCodec>, ...>>>, ...>`, but its trait bounds were not satisfied
 --> tests/ui/trait_def/fail/message_input_non_codec.rs:5:5
  |
5 |     #[ink(message)]
  |     ^ method cannot be called due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/crates/env/src/call/execution_input.rs
  |
  | pub struct ArgumentList<Head, Rest> {
  | ----------------------------------- doesn't satisfy `_: Encode`
  |
  = note: the following trait bounds were not satisfied:
          `ArgumentList<Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
